--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,4 @@
 include ':FtcRobotController'
 include ':TeamCode'
-include ':MeepMeep'
 include ':MeepMeep:main:main'
-include ':FtcRobotController:meepmeepv2'
+include ':MeepMeepV2'
